--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackui",
+  "name": "searchui",
   "version": "0.0.1",
   "description": "A review time project",
   "main": "index.js",
@@ -15,19 +15,27 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.15.2",
+    "bootstrap": "^4.1.1",
     "chalk": "^1.1.3",
+    "css-loader": "^0.28.11",
     "express": "^4.14.0",
+    "jquery": "^3.3.1",
     "nodemon": "^1.14.12",
     "pg": "^6.1.0",
+    "popper.js": "^1.14.3",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.3.2",
+    "react-paginate": "^5.2.3",
     "react-redux": "^4.4.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.1.1",
+    "reactstrap": "^6.1.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
-    "sequelize": "^4.7.4"
+    "sequelize": "^4.7.4",
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
