--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "skeleton"
   ],
   "dependencies": {
+    "antd": "^3.6.4",
     "axios": "^0.17.1",
     "body-parser": "^1.15.2",
     "bootstrap": "^4.1.1",
