--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.14.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "nodemon": "^1.14.12",
     "pg": "^6.1.0",
     "popper.js": "^1.14.3",
@@ -39,11 +40,16 @@
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.1",
+    "babel-preset-stage-0": "^6.3.13",
     "volleyball": "^1.4.1",
     "webpack": "^3.5.5"
   }
